feat: add primary WAN incident alerting
